fixed header section overflowing

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,7 @@ button {
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
+  overflow-x: hidden;
 
   position: relative;
   min-height: 100vh;
@@ -131,7 +132,7 @@ button {
 .hero__main--title {
   color: var(--White);
 
-  font-size: 3rem;
+  font-size: calc(2.5rem);
   letter-spacing: 4px;
 
   text-transform: uppercase;
